// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node Listing Metric Cell should format N/A as the metric for an offline node 1`] = `
<div
  class="monTableCell__offline"
>
  N/A
</div>
`;

exports[`Node Listing Metric Cell should format a non-percentage metric 1`] = `
<div
  class="euiFlexGroup css-i9roje-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  />
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup css-bqv98l-euiFlexGroup-responsive-xs-flexStart-stretch-row"
      data-test-subj="testCell2"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <div
          class="euiPopover css-n7tnex-euiPopover-inline-block"
        >
          <button
            aria-label="More information about this metric"
            class="euiButtonIcon css-13giw8n-euiButtonIcon-xs-empty-text"
            data-test-subj="monitoringCellIcon-testCell2"
            title="More information about this metric"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="sortDown"
            />
          </button>
        </div>
      </div>
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <div
          class="euiText css-1py2xv4-euiText-m"
        >
          206.3 GB
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Node Listing Metric Cell should format a percentage metric 1`] = `
<div
  class="euiFlexGroup css-i9roje-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
>
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  />
  <div
    class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup css-bqv98l-euiFlexGroup-responsive-xs-flexStart-stretch-row"
      data-test-subj="testCell"
    >
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <div
          class="euiPopover css-n7tnex-euiPopover-inline-block"
        >
          <button
            aria-label="More information about this metric"
            class="euiButtonIcon css-13giw8n-euiButtonIcon-xs-empty-text"
            data-test-subj="monitoringCellIcon-testCell"
            title="More information about this metric"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="sortDown"
            />
          </button>
        </div>
      </div>
      <div
        class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      >
        <div
          class="euiText css-1py2xv4-euiText-m"
        >
          0%
        </div>
      </div>
    </div>
  </div>
</div>
`;
